# GameWorld

./: .gitignore  CMakeLists.txt  GODOT_INTEGRATION.md  README.md  main.cpp
docs/: ERPE.md  世界设定_代码余烬.md  模型生成.md  种群.md
godot-extension/: coordinate_mapper.cpp  coordinate_mapper.h  gdextension.cpp  simulation_wrapper.cpp  simulation_wrapper.h
godot-game-world/: analyze_fbx_animations.py  analyze_unity_prefabs.py  check_bear_animations.gd  check_bear_animations.gd.uid  check_deer_meshes.gd  check_deer_meshes.gd.uid  configure_fbx_imports.py  create_animal_scenes.gd  create_animal_scenes.gd.uid  debug_bear_import.gd  debug_bear_import.gd.uid  icon.svg.import  inspect_fbx_raw.py  prefab_configs.gd  prefab_configs.gd.uid  project.godot  unity_to_godot_prefab_converter.py
godot-game-world/addons/gameworld_simulation/: gameworld_simulation.gdextension  gameworld_simulation.gdextension.uid
godot-game-world/assets/simple_forest_animals/materials/: forest_animal.tres
godot-game-world/assets/simple_forest_animals/models/: bear.fbx.import  boar.fbx.import  deer.fbx.import  fox.fbx.import  rabbit.fbx.import
godot-game-world/assets/simple_forest_animals/textures/: simple_forest_animals_texture.png.import
godot-game-world/scenes/animals/: bear_01.tscn  bear_02.tscn  bear_03.tscn  boar_01.tscn  boar_02.tscn  boar_03.tscn  doe_01.tscn  doe_02.tscn  fox_01.tscn  fox_02.tscn  fox_03.tscn  moose_female_01.tscn  moose_female_02.tscn  moose_male_01.tscn  moose_male_02.tscn  moose_male_03.tscn  rabbit_01.tscn  rabbit_02.tscn  rabbit_03.tscn  raccoon_01.tscn  raccoon_02.tscn  raccoon_03.tscn  skunk_01.tscn  skunk_02.tscn  skunk_03.tscn  stag_01.tscn  stag_02.tscn  stag_03.tscn  wolf_01.tscn  wolf_02.tscn  wolf_03.tscn
godot-game-world/scenes/demos/: animal_test.tscn
godot-game-world/scripts/animals/: animal_variant_controller.gd  animal_variant_controller.gd.uid
godot-game-world/scripts/simulation/: camera_controller.gd  camera_controller.gd.uid  creature_manager.gd  creature_manager.gd.uid  simulation_controller.gd  simulation_controller.gd.uid  terrain_manager.gd  terrain_manager.gd.uid
godot-game-world/scripts/ui/: data_panel.gd  data_panel.gd.uid
src/components/: Components.h
src/core/: Error.h  Result.h  Types.h
src/ecs/: ComponentStorage.h  Entity.h  Registry.cpp  Registry.h
src/export/: DataExporter.cpp  DataExporter.h
src/gene/: AppearanceGene.h  GameplayGene.h
src/geometry/: IAvatarGenerator.h  MeshData.h  SimpleAvatarGenerator.cpp  SimpleAvatarGenerator.h
src/process/: AtomicProcesses.cpp  AtomicProcesses.h  Effect.h  EffectRecorder.cpp  EffectRecorder.h  ProcessContext.h  ProcessScheduler.cpp  ProcessScheduler.h
src/render/: ConsoleAdapter.h  IRenderAdapter.h
src/simulation/: Region.h  SimulationState.cpp  SimulationState.h  SpeciesTemplate.h
src/systems/: ConversionSystem.cpp  ConversionSystem.h  CreatureSystem.cpp  CreatureSystem.h  GeneSystem.cpp  GeneSystem.h  PopulationSystem.cpp  PopulationSystem.h
src/tools/: ObjExporter.cpp  ObjExporter.h
src/vector2d/: IVectorCharacterGenerator.h  SVGExporter.cpp  SVGExporter.h  SimpleVectorGenerator.cpp  SimpleVectorGenerator.h  VectorCharacter.h  VectorShapes.h  VectorTypes.h
